# pbh-ctf

./: .gitignore  Cargo.toml  README.md  foundry.toml
.github/workflows/: relyance-sci.yml  test.yml
contracts/: PBHKingOfTheHill.sol
crates/examples/: ctf_transaction.rs  pbh_ctf_transaction.rs
crates/pbh-ctf/: Cargo.toml  config.toml  ctf_bot.toml
crates/pbh-ctf/examples/: ctf_transaction.rs  pbh_ctf_transaction.rs
crates/pbh-ctf/src/: bindings.rs  config.rs  lib.rs  main.rs  transaction.rs  world_id.rs
crates/pbh-helpers/: Cargo.toml
crates/pbh-helpers/examples/: transaction.rs
crates/pbh-helpers/src/: bindings.rs  helpers.rs  lib.rs
script/: Deploy.s.sol  DeployRewardDistributor.s.sol
src/: PBHKingOfTheHill.sol  RewardDistributor.sol
src/interfaces/: IPBHKingOfTheHill.sol
test/: PBHKingOfTheHill.t.sol  RewardDistributor.t.sol
