[package]
name = "pbh-ctf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pbh-helpers.workspace = true

alloy-provider.workspace = true
alloy-primitives.workspace = true
alloy-transport.workspace = true
alloy-signer-local.workspace = true
alloy-network.workspace = true
alloy-eips.workspace = true 

tokio.workspace = true
async-stream.workspace = true
futures.workspace = true
serde.workspace = true
eyre.workspace = true
reqwest.workspace = true
config.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
