[package]
name = "pbh-ctf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy-provider.workspace = true
alloy-primitives.workspace = true
alloy-transport.workspace = true
alloy-signer-local.workspace = true
alloy-network.workspace = true
alloy-eips.workspace = true

tokio.workspace = true
async-stream.workspace = true
futures.workspace = true
serde.workspace = true
eyre.workspace = true
reqwest.workspace = true
config.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

world-chain-builder-pbh.workspace = true
world-chain-builder-test-utils.workspace = true

semaphore-rs.workspace = true

alloy-sol-types.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-consensus.workspace = true
alloy-contract.workspace = true

serde_json.workspace = true
base64.workspace = true
bon.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true


[[bin]]
name = "pbh-ctf"
path = "bin/pbh_koth.rs"
