[package]
name = "pbh-helpers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
world-chain-builder-pbh.workspace = true
world-chain-builder-pool.workspace = true
semaphore-rs.workspace = true

serde.workspace = true
serde_json.workspace = true
base64.workspace = true
eyre.workspace = true
reqwest.workspace = true