[package]
name = "pbh-helpers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
world-chain-builder-pbh.workspace = true
world-chain-builder-test-utils.workspace = true

semaphore-rs.workspace = true

alloy-primitives.workspace = true
alloy-network.workspace = true
alloy-sol-types.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-signer-local.workspace = true
alloy-consensus.workspace = true
alloy-contract.workspace = true

serde.workspace = true
serde_json.workspace = true
base64.workspace = true
eyre.workspace = true
reqwest.workspace = true
bon.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
